# flashcards

./: .gitignore  README.md  eslint.config.mjs  generate_json_prompt.txt  package-lock.json  package.json  pyproject.toml  status.md  sync.sh
agent/: README.md  __init__.py  cli.py  config.py  enrichers.py  llm.py  orchestrator.py  parser.py  pronunciation.py  schemas.py  tools.py  wordcheck.py  workspace.py
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/gemini/: route.ts
src/app/api/tts/: route.ts
src/app/manage/: page.tsx
src/app/modules/: page.tsx
src/app/modules/match-pairs/: page.tsx
src/app/modules/ough-words/: page.tsx
src/app/reset/: page.tsx
src/app/settings/: page.tsx
src/app/study/: page.tsx
src/app/study/all/: page.tsx
src/app/study/sentences/: page.tsx
src/app/study/words/: page.tsx
src/components/: ConfusingWordsLearn.tsx  ConfusingWordsQuiz.tsx  MatchPairsGame.tsx  ModeCard.tsx  Navbar.tsx  PronounceButton.tsx  SentenceCard.tsx  StudyCompleteState.tsx  StudyEmptyState.tsx  StudyProgress.tsx  WordCard.tsx
src/context/: CardContext.tsx  ThemeContext.tsx
src/data/: confusingWords.ts  matchingPairs.ts  vocab.bkp  vocab.json  vocab.orig
src/hooks/: useStudySession.ts
src/lib/: defaultCards.ts  matchPairsStorage.ts  storage.ts  studyQueue.ts  studyUtils.ts  types.ts
tests/: test_enrichers.py  test_wordcheck.py
