[project]
name = "flashcards-agent"
version = "0.1.0"
description = "LangChain tool pipeline that generates src/data/vocab.json from a Markdown source for the flashcards Next.js app"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3.27",
  "langchain-core>=0.3.78",
  "langchain-openai>=0.3.36",
  "json-repair>=0.54.2",
  "pydantic>=2.9.2",
  "tenacity>=9.1.2",
]

[project.scripts]
flashcards-agent = "agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
package = true
